Add workaround for nexus-staging-maven-plugin with JDK 17. Upgrade version.